finishing all feature
