# server.go
@@ -6,27 +6,26 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/gorilla/mux"
 	httpSwagger "github.com/swaggo/http-swagger"
-	"gorm.io/driver/mysql"
-	"gorm.io/gorm"
 )
 
 type Todos struct {
-	ID          int    `json:"id" gorm:"primaryKey" example:"1"`
+	ID          int    `json:"id" example:"1"`
 	Title       string `json:"title" example:"Reading book"`
 	Description string `json:"description" example:"Reading book at 9 A.M"`
-	IsComplete  string `json:"is_complete" gorm:"default:false" example:"false"`
+	IsComplete  string `json:"is_complete" example:"false"`
 }
 
 type ErrorResponse struct {
 	Error string `json:"error" example:"error"`
 }
 
-var db *gorm.DB
 var prevOrderID = 0
 var all_todos []Todos
+var error ErrorResponse
 
 // @title Todos API
 // @version 1.0
@@ -39,31 +38,19 @@ var all_todos []Todos
 // @host localhost:8080
 // @BasePath /
 
-func initDB() {
-	var err error
-	dsn := "root:@tcp(127.0.0.1:3306)/todosapp?charset=utf8mb4&parseTime=True&loc=Local"
-	db, err = gorm.Open(mysql.Open(dsn), &gorm.Config{})
-	log.Println("SUCCESS ACCESS DB")
-	if err != nil {
-		panic("failed to connect database")
-	}
-
-	// Migrate the schema
-	db.AutoMigrate(&Todos{})
-
-}
-
 func main() {
-	initDB()
 	router := mux.NewRouter()
-	router.HandleFunc("/todos", GetTodos).Methods("GET")
+	router.HandleFunc("/todos", GetAllTodos).Methods("GET")
+	router.HandleFunc("/todos/{id}", GetTodos).Methods("GET")
 	router.HandleFunc("/todos", CreateTodos).Methods("POST")
+	router.HandleFunc("/todos/{id}", UpdateTodos).Methods("PUT")
+	router.HandleFunc("/todos/{id}", DeleteTodos).Methods("DELETE")
 	log.Println("Start server at localhost:8080")
 	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 	http.ListenAndServe(":8080", router)
 }
 
-// GetTodos godoc
+// GetAllTodos godoc
 // @Summary Get all todos
 // @Description Get details of all todos
 // @Tags todos
@@ -74,14 +61,11 @@ func main() {
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-func GetTodos(w http.ResponseWriter, r *http.Request) {
-	var todos []Todos
+func GetAllTodos(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 
-	db.Find(&todos)
-
-	json.NewEncoder(w).Encode(todos)
+	json.NewEncoder(w).Encode(all_todos)
 
 }
 
@@ -101,12 +85,114 @@ func CreateTodos(w http.ResponseWriter, r *http.Request) {
 	var todos Todos
 	w.Header().Set("Content-type", "application/json")
 	err := json.NewDecoder(r.Body).Decode(&todos)
-	print(todos.ID)
 	if err != nil {
 		fmt.Println("ERROR")
 		log.Fatal(err)
 	}
-
-	db.Create(&todos)
+	prevOrderID++
+	todos.ID = prevOrderID
+	all_todos = append(all_todos, todos)
 	json.NewEncoder(w).Encode(todos)
+}
+
+// GetTodos godoc
+// @Summary Get a todo
+// @Description Get a todo
+// @Tags todos
+// @Accept json
+// @Produce json
+// @Param id path int true "ID of the todos"
+// @Success 200 {object} Todos
+// @Router /todos/{id} [get]
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+func GetTodos(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	params := mux.Vars(r)
+	ID, err := strconv.Atoi(params["id"])
+
+	if err != nil {
+		msg := fmt.Sprintf("id must be integer")
+		error.Error = msg
+		json.NewEncoder(w).Encode(error)
+		return
+	}
+	for _, val := range all_todos {
+		if val.ID == ID {
+			json.NewEncoder(w).Encode(val)
+			return
+		}
+	}
+	msg := fmt.Sprintf("Cant find id %v", ID)
+	error.Error = msg
+	json.NewEncoder(w).Encode(error)
+	return
+
+}
+
+// UpdateTodos godoc
+// @Summary Update a todo
+// @Description Update status IsComplete a todo
+// @Tags todos
+// @Accept json
+// @Produce json
+// @Param id path int true "ID of the todos"
+// @Success 200 {object} Todos
+// @Router /todos/{id} [put]
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+func UpdateTodos(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	params := mux.Vars(r)
+	ID, err := strconv.Atoi(params["id"])
+
+	if err != nil {
+		msg := fmt.Sprintf("id must be integer")
+		error.Error = msg
+		json.NewEncoder(w).Encode(error)
+		return
+	}
+
+	for _, val := range all_todos {
+		if val.ID == ID {
+			val.IsComplete = "true"
+			json.NewEncoder(w).Encode(val)
+			return
+		}
+	}
+	msg := fmt.Sprintf("Cant find id %v", ID)
+	error.Error = msg
+	json.NewEncoder(w).Encode(error)
+	return
+}
+
+// DeleteTodos godoc
+// @Summary Delete a todo
+// @Description Delete a todo
+// @Tags todos
+// @Accept json
+// @Produce json
+// @Param id path int true "ID of the todos"
+// @Success 200 {object} Todos
+// @Router /todos/{id} [delete]
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+func DeleteTodos(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	param := mux.Vars(r)
+	ID, err := strconv.Atoi(param["id"])
+	if err != nil {
+		msg := fmt.Sprintf("id must be integer")
+		error.Error = msg
+		json.NewEncoder(w).Encode(error)
+	}
+	for i, val := range all_todos {
+		if val.ID == ID {
+			all_todos = append(all_todos[:i], all_todos[i+1:]...)
+			w.WriteHeader(http.StatusNoContent)
+		}
+	}
 }
